wraping bug fix

--- a/src/components/Note.css
+++ b/src/components/Note.css
@@ -1,6 +1,6 @@
 ul{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap:wrap-reverse;
     justify-content: center;
 }
 li{
